      use "B" or :buffers instead
    * IMPORTANT: input fields are not blured anymore by default after a page has loaded
      use :set [no]focuscontent to control the behavior (thanks Paul Sobey for the 
      generous donation which made this behavior possible)
    * IMPORTANT: ctrl-x/a never take possible negative URLs into account, it was just
      too unpredictable
    * add :bl[ast], :bf[irst], :br[ewind] to go to first/last tab
    * add :bn[ext], :bp[revious], :bN[ext] to switch to next/previous tab
    * add :pagestyle command to allow for switching between alternate style sheets
    * add :b# to select the alternate buffer
    * add :tabduplicate command 
    * new 'urlseparator' option for specifying the regexp used to split the arg to
      :open, :tabopen and :winopen
    * :set editor now accepts quoting/escaping to use an editor with spaces in the path
    * support for :%foo as a count for commands (not yet widely used)
    * show informative message when a background tab was loaded, especially useful
      with a hidden tab bar.
    * new "l" flag for 'complete' to reuse the Firefox awesome bar for getting better
      completions for :open. Works only when 'wildoptions' contains "auto"
    * new wildoptions=auto option (default off for now), to automatically list
      completions without the need to press the tab key
    * new argument parser for ex commands, should tell better error messages when
      you do things like :bmark -tag=a,b instead of :bmark -tags=a,b
    * some option values can be tab-completed now; e.g., :set wim=<tab>
    * :bdelete accepts an optional argument now
    * renamed some :autocmd, mainly BrowserStartup -> Startup and BrowserExit -> Quit
    * don't pass certain keys like ctrl-o or ctrl-n to firefox in insert mode
    * keywords in :open <arg> have higher priority than local files now
    * add :set online to control the "work offline" menu item
    * add :jumps command to list current tab's history