@@ -1,0 +1,25 @@
+HEADER
+
+|printing| +
+
+|:ha| |:hardcopy| +
+||:ha[rdcopy][!]||
+________________________________________________________________________________
+Print current document. Open a GUI dialog where you can select the printer,
+number of copies, orientation, etc.  When used with [a]![a], the dialog is
+skipped and the default printer used.
+________________________________________________________________________________
+
+section:Firefox{nbsp}printing{nbsp}dialogs[firefox-print-dialogs]
+
+The "Print Preview" and "Page Setup" dialogs can be opened via the :dialog command
+
+  :dialog printpreview
+
+and
+
+  :dialog printsetup
+
+respectively.
+
+// vim: set syntax=asciidoc:
